@@ -1143,3 +1143,7 @@ I used ghostview.
 ----------------------------------------------------
 -Now you can "don't print a text"
 used "cell layout" dialogbox -> misc -> "don't print text"
+
+2001-01-03-Montel laurent <lmontel@mandrakesoft.com>
+----------------------------------------------------
+-Now you can create "Sort list" for autofill
